main/default/objects/Team_Request__c/Team_Request__c.object-meta.xml
<CustomObject>
    <label>Team Request</label>
    <nameField>
        <label>Team Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>