main/default/objects/Team_Request__c/fields/Partners_Need_Access__c.field-meta.xml
<CustomField>
    <fullName>Partners_Need_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Will the partern/client ever need access to site?</inlineHelpText>
    <label>Partners Need Access?</label>
    <type>Checkbox</type>
</CustomField>