main/default/objects/Team_Request__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Team Requests</relationshipLabel>
    <relationshipName>Team_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>