main/default/objects/Team_Request__c/fields/Team_Member_1__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member #1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Team Requests</relationshipLabel>
    <relationshipName>Team_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>