main/default/objects/Team_Request__c/fields/Team_Member_2__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member #2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Team Requests (Team Member #2)</relationshipLabel>
    <relationshipName>Team_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>